<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/users_list_messages"
            android:title="@string/usersList"
            app:showAsAction="ifRoom">
    </item>
    <item
            android:id="@+id/create_group_chat"
            android:title="@string/createGroupChat"
            app:showAsAction="collapseActionView">
    </item>
    <item
            android:id="@+id/setting_messages"
            android:title="@string/settings"
            app:showAsAction="collapseActionView">
    </item>
    <item
            android:id="@+id/log_out_messages"
            android:title="@string/logOut"
            app:showAsAction="collapseActionView">
    </item>
</menu>