<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kotlin.messenger2018.RegisterActivity" android:background="@color/logInBackground"
>

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_editText_register" android:layout_marginStart="32dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp" android:layout_marginTop="32dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/username" app:layout_constraintTop_toBottomOf="@+id/addPhoto_button_register"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_editText_register"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="@+id/username_editText_register"
            app:layout_constraintEnd_toEndOf="@+id/username_editText_register"
            android:background="@drawable/rounded_edittext" android:hint="@string/email"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username_editText_register"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_editText_register"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="@+id/email_editText_register"
            android:background="@drawable/rounded_edittext" android:hint="@string/password"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email_editText_register"
            app:layout_constraintStart_toStartOf="@+id/email_editText_register"
    />
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/register_button_register"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/password_editText_register"
            app:layout_constraintStart_toStartOf="@+id/password_editText_register"
            app:layout_constraintEnd_toEndOf="@+id/password_editText_register"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alreadyHaveAccount_textView_register" android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/register_button_register"
            app:layout_constraintEnd_toEndOf="@+id/register_button_register"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"
            android:textSize="18sp" android:textStyle="normal|bold"/>
    <Button
            android:text="@string/addPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/addPhoto_button_register" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/circle_imagebutton_register" android:textStyle="bold"
            android:textColor="@android:color/white"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:layout_constraintEnd_toEndOf="@+id/addPhoto_button_register"
            app:layout_constraintBottom_toBottomOf="@+id/addPhoto_button_register"
            app:layout_constraintStart_toStartOf="@+id/addPhoto_button_register"
            app:layout_constraintTop_toTopOf="@+id/addPhoto_button_register"
            app:civ_border_width="5dp" android:id="@+id/circle_imageview_register"/>
</android.support.constraint.ConstraintLayout>