<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/logInBackground">

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_editText_login"
            android:hint="@string/email" app:layout_constraintEnd_toEndOf="parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="112dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            android:background="@drawable/rounded_edittext"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_editText_login"
            android:hint="@string/password" android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_editText_login"
            app:layout_constraintEnd_toEndOf="@+id/email_editText_login"
            app:layout_constraintStart_toStartOf="@+id/email_editText_login"
            android:background="@drawable/rounded_edittext"/>
    <Button
            android:text="@string/logIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/login_button_login" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_editText_login"
            app:layout_constraintEnd_toEndOf="@+id/password_editText_login"
            app:layout_constraintStart_toStartOf="@+id/password_editText_login"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/returnToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/returnToRegister_textView_login" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login"
            app:layout_constraintEnd_toEndOf="@+id/login_button_login"
            app:layout_constraintStart_toStartOf="@+id/login_button_login" android:textColor="@android:color/white"
            android:textSize="18sp" android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>