<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateGroupActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_chatname_textView_create_groupchat"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/group_chat_image_imageView_create_groupchat" app:layout_constraintEnd_toEndOf="@+id/group_chat_image_imageView_create_groupchat"
            app:layout_constraintStart_toStartOf="@+id/group_chat_image_imageView_create_groupchat" android:layout_marginTop="32dp"
            android:textSize="24sp" android:text="@string/groupChatName"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/group_chat_image_imageView_create_groupchat" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/addPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/addPhoto_button_create_groupchat"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="32dp"
            android:background="@drawable/circle_imagebutton_register" android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/group_chat_image_imageView_create_groupchat" app:layout_constraintEnd_toEndOf="@+id/group_chat_image_imageView_create_groupchat"
            app:layout_constraintStart_toStartOf="@+id/group_chat_image_imageView_create_groupchat" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/group_chat_image_imageView_create_groupchat"/>
    <Button
            android:text="@string/addUsers"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/add_users_buttom_create_groupchat" android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button"
            app:layout_constraintTop_toBottomOf="@+id/group_chatname_textView_create_groupchat"
            app:layout_constraintEnd_toEndOf="@+id/group_chatname_textView_create_groupchat"
            app:layout_constraintStart_toStartOf="@+id/group_chatname_textView_create_groupchat"/>
</android.support.constraint.ConstraintLayout>